# AInvoiceX

./: .gitignore  README.md  pyproject.toml
frontend/: 1_chatbot.py  2_documents.py  data.db
src/: 1_chatbot.py  2_documents.py  3_emails.py  main.py
src/chroma_db_func/: embedder.py  retriver.py
src/test/: test.py
src/utility/: constant.py  logger.py
src/utility/chroma_db_func/: embedder.py  retriver.py
src/utility/path_func/: path.py
src/utility/time_func/: time.py
